<resources>
    <string name="app_name">My_Application_smart_house</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart house</string>
    <string name="nav_header_subtitle">smart.house@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_bedroom">Bedroom</string>
    <string name="menu_childrens_room">Сhildrens room</string>
    <string name="menu_hall">Hall</string>
    <string name="menu_shower_room">Shower room</string>
    <string name="menu_hallway">Hallway</string>
    <string name="menu_toilet">Toilet</string>
    <string name="menu_kitchen">Kitchen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>